--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,9 +1,13 @@
-<button (click)="countval()">click me</button>
-
-
 <form>
   <label>First Name : </label>
-  <input type="text" value={{fname}}>
+  <input type="text" id="fname">
+  <label>Last Name : </label>
+  <input type="text" id="lname">
+  <label>Address : </label>
+  <input type="text" id="add">
+  <label>Email : </label>
+  <input type="email" id="mail">
+  <label>Phone Number : </label>
+  <input type="number" id="pn">
+  <button type="submit" (click)="formdata()">submit</button>
 </form>
-
-<img [src]="img_url">
