week two day one task completec

--- a/my-first-app/src/app/content/content.component.html
+++ b/my-first-app/src/app/content/content.component.html
@@ -1,2 +1,5 @@
 <p>content works!</p>
-<app-header></app-header>
+<!-- <app-header></app-header>
+<app-footer></app-footer> -->
+
+<!-- <app-footer></app-footer> -->
