--- a/my-first-app/src/app/header/header.component.html
+++ b/my-first-app/src/app/header/header.component.html
@@ -1,2 +1,5 @@
 <p>header works!</p>
-<app-footer></app-footer>
+<!-- <app-content></app-content>
+<app-footer></app-footer> -->
+
+<!-- <app-content></app-content> -->
