--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,13 +1,30 @@
-<form>
-  <label>First Name : </label>
-  <input type="text" id="fname">
-  <label>Last Name : </label>
-  <input type="text" id="lname">
-  <label>Address : </label>
-  <input type="text" id="add">
-  <label>Email : </label>
-  <input type="email" id="mail">
-  <label>Phone Number : </label>
-  <input type="number" id="pn">
-  <button type="submit" (click)="formdata()">submit</button>
-</form>
+<!-- <app-header></app-header> -->
+
+<!-- <app-content></app-content> -->
+
+<!-- <app-header></app-header> -->
+
+<!-- <button type="submit" (click)="countval()">submit</button>
+<p>{{count}}</p> -->
+
+<!-- <form>
+    <label >First name:</label><br>
+    <input type="text" id="fname" value="Naynesh"><br>
+    <label >Last name:</label><br>
+    <input type="text" id="lname" value="Chaudhary"><br>
+    <label >Address:</label><br>
+    <input type="text" id="address" value="Ahmedabad"><br>
+    <label >Phone Number:</label><br>
+    <input type="text" id="phone_num" value="1234567890"><br>
+    <label >Email:</label><br>
+    <input type="email" id="email" value="n@gamil.com"><br>
+    <label >Password:</label><br>
+    <input type="password"><br>
+
+    <button type="submit" (click)="display_form_data()">submit</button>
+  </form> -->
+
+
+<app-coffee-header></app-coffee-header>
+<app-body-content></app-body-content>
+<app-coffee-footer></app-coffee-footer>
