--- a/my-first-app/src/app/header/header.component.html
+++ b/my-first-app/src/app/header/header.component.html
@@ -1,5 +1,15 @@
-<p>header works!</p>
+<!-- <p>header works!</p> -->
 <!-- <app-content></app-content>
 <app-footer></app-footer> -->
 
 <!-- <app-content></app-content> -->
+
+<!-- <ul>
+    <li *ngFor="let counter of counters">
+        {{counter}}
+    </li>
+</ul>
+
+<app-product (newItemEvent)="incrementcounter($evenet)"></app-product> -->
+
+<app-product></app-product>
