--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -76,20 +76,20 @@
     <p [ngClass]="classfeature()">{{item}}</p>
   </div> -->
 
-<div class="container">
+<!-- <div class="container">
     <div *ngFor="let numarray of numarrays">
         <p [ngClass]=" numarray%2 == 0 ? 'red':'yellow'">{{numarray}}</p>
     </div>
-  </div>
+  </div> -->
 
-<!-- <div class="container">
+<div class="container">
       <button type="button" (click)="enable()">Enable</button>
       <button type="button" (click)="disenable()">Disable</button>
       <p [ngClass]="flag==true ? 'green':'white'">Hello</p>
-
+<!-- 
       <button [ngStyle]="{background:'green'}">click</button>
-      <button [ngStyle]="appendStyle">click</button>
-  </div> -->
+      <button [ngStyle]="appendStyle">click</button> -->
+  </div>
 
 <!-- <div class="container">
       
