task completed : add to cart

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -82,14 +82,14 @@
     </div>
   </div> -->
 
-<div class="container">
+<!-- <div class="container">
       <button type="button" (click)="enable()">Enable</button>
       <button type="button" (click)="disenable()">Disable</button>
       <p [ngClass]="flag==true ? 'green':'white'">Hello</p>
-<!-- 
+
       <button [ngStyle]="{background:'green'}">click</button>
-      <button [ngStyle]="appendStyle">click</button> -->
-  </div>
+      <button [ngStyle]="appendStyle">click</button>
+  </div> -->
 
 <!-- <div class="container">
       
@@ -127,7 +127,7 @@
 
 
 
-<!-- <table class="table table-striped" id="my_table">
+<table class="table table-striped" id="my_table">
   <thead>
     <tr>
       <th>Id</th>
@@ -147,4 +147,4 @@
     </tr>
   </tbody>
 </table>
-<app-sell-product (newItemEvent)="purch_product($event)"></app-sell-product> -->
+<app-sell-product (newItemEvent)="purch_product($event)"></app-sell-product>
