--- a/my-first-app/src/app/sell-product/sell-product.component.html
+++ b/my-first-app/src/app/sell-product/sell-product.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container">
+<div class="container">
     <div class="row">
         <div class="col">
             <img src="./../assets/images/hairoil.jpg">
@@ -65,6 +65,4 @@
             <button type="button" (click)="quntity(products[5])">add to cart</button>
         </div>
     </div>
-</div> -->
-
-
+ </div>
