--- a/my-first-app/src/app/header/header.component.html
+++ b/my-first-app/src/app/header/header.component.html
@@ -12,4 +12,5 @@
 
 <app-product (newItemEvent)="incrementcounter($evenet)"></app-product> -->
 
-<app-product></app-product>
+<!-- <app-product></app-product> -->
+<p>Child Counter : {{this.Info.counter}}</p>
