third task completed : display form data using services

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -183,6 +183,14 @@
      </table>
    </div> -->
 
-   <button type="button" (click)="Increment()">click</button>
-   <p>Parent Counter : {{parent_counter}}</p>
+   <!-- <button type="button" (click)="Info.Increment()">click</button>
+   <p>Parent Counter : {{this.Info.counter}}</p>
+   <app-header></app-header> -->
+
    <app-header></app-header>
+
+   <p>First Name : {{this.Info.firstname}}</p>
+   <p>Last Name : {{this.Info.lastname}}</p>
+   <p>Address : {{this.Info.address}}</p>
+   <p>Phone Number : {{this.Info.phonenumber}}</p>
+   <p>Email : {{this.Info.email}}</p>
