task completed : reactive form

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -244,7 +244,7 @@
   <button type="button" (click)="multiply(num)">click</button>
     <p>{{num}} * {{count}} = {{mul}}</p> -->
 
-
+<!-- 
     <div class="container">
         <label >First name:</label><br>
         <input type="text" [(ngModel)]="fname"><br>
@@ -266,4 +266,8 @@
         <button type="button" (click)="hoteldata()">submit</button><br><br>
       
   
-    </div>
+    </div> -->
+
+
+    <app-reactiveform-ex></app-reactiveform-ex>
+    <app-reactive-address-form></app-reactive-address-form>
