task Completed : reactive form

--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -269,5 +269,5 @@
     </div> -->
 
 
-    <app-reactiveform-ex></app-reactiveform-ex>
+    <!-- <app-reactiveform-ex></app-reactiveform-ex> -->
     <app-reactive-address-form></app-reactive-address-form>
